<resources>
    <string name="app_name">Proyecto Averias</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register"><u><b><i>Registrarme</i></b></u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person_name">Nombre de la persona</string>
    <string name="password">Clave de usuario</string>
    <string name="usernameHint">Nombre de usuario</string>
    <string name="user_id_hint">Número de Cédula</string>
    <string name="phone_number">Número de Teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="create">Crear</string>
    <string name="canceling">Cancelar</string>
    <string name="create_failure">Crear avería</string>
    <string name="question_create">¿Desea crear una nueva avería en este punto?</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="required">Este campo es requerido</string>
</resources>
