<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorfondo"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/person_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/email"
            android:layout_below="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="0dp"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/email"
            android:inputType="text"/>

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_below="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/phone_number"
            android:inputType="text"/>

        <EditText
            android:id="@+id/userid"
            android:layout_below="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/user_id_hint"
            android:inputType="text"/>

        <EditText
            android:layout_below="@+id/userid"
            android:id="@+id/usernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/usernameHint"
            android:inputType="text"/>

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_below="@+id/usernameRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/password"
            android:inputType="text"/>

        <Button
            android:id="@+id/addUser"
            android:layout_below="@+id/passwordRegister"
            android:layout_width="156dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:text="@string/crear_usuario"
            />

    </RelativeLayout>

</ScrollView>
